@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="cpsportlets_folder_sorting_criteria" meta_type="CPS Vocabulary">
+ <property name="title"></property>
+ <property name="title_msgid"></property>
+ <property name="description"></property>
+ <property name="acl_write_roles">Manager</property>
+ <item key="" msgid=""></item>
+ <item key="date" msgid="cpsportlets_folder_sort_by_date_label">Date</item>
+ <item key="title" msgid="cpsportlets_folder_sort_by_title_label">Title</item>
+ <item key="author"
+    msgid="cpsportlets_folder_sort_by_author_label">Author</item>
+</object>
