@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="cpsportlets_folder_sorting_direction"
+   meta_type="CPS Vocabulary">
+ <property name="title"></property>
+ <property name="title_msgid"></property>
+ <property name="description"></property>
+ <property name="acl_write_roles">Manager</property>
+ <item key="asc" msgid="cpsportlets_folder_sort_asc_label">Ascending</item>
+ <item key="desc" msgid="cpsportlets_folder_sort_desc_label">Descending</item>
+</object>
