@@ -13,6 +13,7 @@ Bug fixes:
   upgrading to CPS3.4.0
 - #1166: add rss and atom export in folder_view
 - #1449: Set portal email from manager email at site creation.
+- added missing vocabularies definitions used by the navigation portlet (#1341)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add language selector on the Front page
